--- a/index.html
+++ b/index.html
@@ -187,40 +187,47 @@ body{
 </main>
 
 <script>
-/* ====== CONFIG : TU CHANGES UNIQUEMENT CES 2 LIGNES ====== */
+/* ====== CONFIG (NE CHANGE PAS LE RESTE) ====== */
 const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
-const API = "https://script.googleusercontent.com/macros/echo?user_content_key=AY5xjrQECihV3Ai1WremzIBEs8fF7DpOa89vP0XYnwXBL0fxr3AH3PaZgPi823TJp5qY9ZdM1eE8Bzm5AcuPY9dvLFQA1EvwoUZnIjFZI174wp5hGb8BfFzxLN0HGCBlfDyVdkN0ettZvdhRggb3wvSisthFFMqVEFXtpbcTMAD9S7fCIe71OqBii4iM08Gy5utyTdzgLAZ1NdxSxWbPyRjgYY94JhKeiSQSs61HM99Ot03fPib_ITXlNTeaTlCiiqkY4L9pcfxON8c13fhD9RwPSPZmWYScsA&lib=MUrxZm6e_GZu_nx92INa1hxWMXI2VoG64";
-/* ======================================================= */
-
+const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec";
 const LS_KEY = "cs_portail_email_v1";
 
-const $loginScreen = document.getElementById("loginScreen");
+/* ====== DOM ====== */
+const $loginBox = document.getElementById("loginBox");
 const $portal = document.getElementById("portal");
 const $msg = document.getElementById("loginMsg");
 const $logout = document.getElementById("logoutBtn");
-const $gOnload = document.getElementById("g_id_onload");
 
-$gOnload.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
-
+/* ====== UI ====== */
 function showMsg(t){ $msg.textContent = t || ""; }
 
-function showPortal(){
-  $loginScreen.style.display = "none";
+function showPortal(push=true){
+  $loginBox.style.display = "none";
   $portal.style.display = "flex";
-}
-function showLogin(){
-  $portal.style.display = "none";
-  $loginScreen.style.display = "flex";
+  if(push){
+    const url = new URL(location.href);
+    url.searchParams.set("portal","1");
+    history.pushState({page:"portal"}, "", url.toString());
+  }
 }
 
+function showLogin(push=true){
+  $portal.style.display = "none";
+  $loginBox.style.display = "block";
+  if(push){
+    const url = new URL(location.href);
+    url.searchParams.delete("portal");
+    history.pushState({page:"login"}, "", url.toString());
+  }
+}
+
+/* ====== JWT email (ROBUSTE) ====== */
 function b64urlToUtf8(b64url){
   let s = String(b64url || "").replace(/-/g, "+").replace(/_/g, "/");
   while (s.length % 4) s += "=";
   const bin = atob(s);
   let out = "";
-  for (let i=0;i<bin.length;i++){
-    out += "%" + bin.charCodeAt(i).toString(16).padStart(2,"0");
-  }
+  for (let i=0;i<bin.length;i++) out += "%" + bin.charCodeAt(i).toString(16).padStart(2,"0");
   return decodeURIComponent(out);
 }
 function parseJwtEmail(credential){
@@ -230,26 +237,27 @@ function parseJwtEmail(credential){
   return String(payload.email || "").trim().toLowerCase();
 }
 
-/* ✅ JSONP SIMPLE (mobile-friendly) */
-function jsonp(baseUrl, params, timeoutMs = 20000){
+/* ====== JSONP STABLE (baseUrl + params) ====== */
+function jsonp(baseUrl, params={}, timeoutMs=20000){
   return new Promise((resolve, reject) => {
-    const cbName = "cb_" + Math.random().toString(36).slice(2);
+    const cb = "cb_" + Math.random().toString(36).slice(2);
 
-    const u = new URL(baseUrl);
-    for (const [k,v] of Object.entries(params || {})) u.searchParams.set(k, String(v));
-    u.searchParams.set("callback", cbName);
-    u.searchParams.set("_t", String(Date.now()));
+    const qs = new URLSearchParams({
+      ...params,
+      callback: cb,
+      _t: Date.now()
+    }).toString();
 
-    const script = document.createElement("script");
-    script.src = u.toString();
-    script.async = true;
+    const src = baseUrl + (baseUrl.includes("?") ? "&" : "?") + qs;
 
-    let done = false;
+    const s = document.createElement("script");
+    s.async = true;
+    s.defer = true;
+    s.referrerPolicy = "no-referrer";
+
     const cleanup = () => {
-      if (done) return;
-      done = true;
-      try { delete window[cbName]; } catch(e){ window[cbName] = undefined; }
-      if (script.parentNode) script.parentNode.removeChild(script);
+      try { delete window[cb]; } catch(e){ window[cb] = undefined; }
+      s.remove();
     };
 
     const timer = setTimeout(() => {
@@ -257,24 +265,25 @@ function jsonp(baseUrl, params, timeoutMs = 20000){
       reject(new Error("timeout"));
     }, timeoutMs);
 
-    window[cbName] = (data) => {
+    window[cb] = (data) => {
       clearTimeout(timer);
       cleanup();
       resolve(data);
     };
 
-    script.onerror = () => {
+    s.onerror = () => {
       clearTimeout(timer);
       cleanup();
-      reject(new Error("script_load_error"));
+      reject(new Error("load_error"));
     };
 
-    document.head.appendChild(script);
+    s.src = src;
+    document.head.appendChild(s);
   });
 }
 
 async function authCheck(email){
-  // 2 tentatives max
+  // 2 tentatives (mobile)
   for(let i=0;i<2;i++){
     try{
       return await jsonp(API, { view:"auth_check", email, nocache:"1" }, 20000);
@@ -286,10 +295,12 @@ async function authCheck(email){
 /* ====== Google callback ====== */
 async function handleCredentialResponse(response){
   try{
-    showMsg("Vérification de l’accès…");
+    showMsg("Vérification…");
+
     const email = parseJwtEmail(response.credential);
     if(!email){
       localStorage.removeItem(LS_KEY);
+      showLogin(false);
       showMsg("Erreur : email introuvable.");
       return;
     }
@@ -299,51 +310,66 @@ async function handleCredentialResponse(response){
     if(res && res.ok === true){
       localStorage.setItem(LS_KEY, email);
       showMsg("");
-      showPortal();
+      showPortal(true);
     }else{
       localStorage.removeItem(LS_KEY);
+      showLogin(false);
       showMsg("Accès refusé.");
-      showLogin();
     }
   }catch(e){
     localStorage.removeItem(LS_KEY);
-    showMsg("Erreur réseau.");
-    showLogin();
+    showLogin(false);
+    showMsg("Erreur réseau / serveur.");
   }
 }
 
 /* ====== Boot ====== */
-(async function(){
-  showLogin();
-  showMsg("");
+(function(){
+  // client_id au bon endroit
+  const g = document.getElementById("g_id_onload");
+  if(g) g.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
 
-  // Si email mémorisé => re-check obligatoire
+  // état initial depuis l’URL
+  const url = new URL(location.href);
+  if(url.searchParams.get("portal")==="1") showPortal(false);
+  else showLogin(false);
+
+  // si email mémorisé => recheck
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
   if(saved){
-    try{
-      showMsg("Vérification…");
-      const res = await authCheck(saved);
+    showMsg("Vérification…");
+    authCheck(saved).then(res=>{
       if(res && res.ok === true){
         showMsg("");
-        showPortal();
+        showPortal(true);
       }else{
         localStorage.removeItem(LS_KEY);
         showMsg("Accès refusé.");
       }
-    }catch(e){
+    }).catch(()=>{
       localStorage.removeItem(LS_KEY);
-      showMsg("Erreur réseau.");
-    }
+      showMsg("Erreur réseau / serveur.");
+    });
+  }else{
+    showMsg("");
   }
 })();
 
 /* Déconnexion */
-$logout.addEventListener("click", ()=>{
+$logout?.addEventListener("click", ()=>{
   localStorage.removeItem(LS_KEY);
+  showLogin(true);
   showMsg("Déconnecté.");
-  showLogin();
 });
+
+/* Bouton retour (Android) */
+window.onpopstate = () => {
+  const url = new URL(location.href);
+  if(url.searchParams.get("portal")==="1") showPortal(false);
+  else showLogin(false);
+};
 </script>
+
 
 </body>
 </html>
